# stellarpass-contracts

./: Cargo.toml  README.md
.github/workflows/: ci.yml
contracts/event_contract/: Cargo.toml
contracts/event_contract/src/: lib.rs
contracts/payment_contract/: Cargo.toml
contracts/payment_contract/src/: lib.rs
contracts/ticket_contract/: Cargo.toml
contracts/ticket_contract/src/: lib.rs
docs/: contract-specs.md
