[workspace]
resolver = "2"

members = [
  "contracts/event_contract",
  "contracts/ticket_contract",
  "contracts/payment_contract",
]

[workspace.dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
